# kosame

./: Cargo.toml  LICENSE  README.md  compose.yaml  flake.nix  rust-toolchain.toml
example/: Cargo.toml
example/src/: main.rs
examples/postgres/: Cargo.toml
examples/postgres/src/: main.rs
examples/tokio_postgres/: Cargo.toml
examples/tokio_postgres/src/: main.rs
kosame/: Cargo.toml
kosame/src/: connection.rs  dialect.rs  error.rs  keyword.rs  lib.rs  params.rs  pg.rs  postgres.rs  query.rs  relation.rs  schema.rs  sql.rs  sql_formatter.rs  sql_writer.rs
kosame/src/dbms/: mod.rs
kosame/src/dbms/mssql/: mod.rs
kosame/src/dbms/mysql/: mod.rs
kosame/src/dbms/postgres/: internal.rs  mod.rs
kosame/src/dbms/sqlite/: mod.rs
kosame/src/driver/: mod.rs
kosame/src/driver/postgres/: mod.rs
kosame/src/driver/postgres_types/: mod.rs
kosame/src/driver/tokio_postgres/: mod.rs
kosame/src/expr/: binary.rs  bind_param.rs  call.rs  cast.rs  column_ref.rs  lit.rs  mod.rs  paren.rs  unary.rs
kosame/src/postgres/: mod.rs
kosame/src/query/: bind_param.rs  field.rs  mod.rs  node.rs  order_by.rs
kosame/src/query/runner/: mod.rs  multi_query.rs  record_array.rs
kosame/src/statement/: mod.rs
kosame/tests/: select.rs
kosame_cli/: Cargo.toml
kosame_dsl/: Cargo.toml
kosame_dsl/src/: lib.rs  sql.rs
kosame_dsl/src/dsl/: alias.rs  attribute.rs  mod.rs  row_struct.rs
kosame_dsl/src/dsl/clause/: limit.rs  offset.rs  order_by.rs  where.rs
kosame_dsl/src/dsl/expr/: column_ref.rs  mod.rs  visitor.rs
kosame_dsl/src/dsl/query/: bind_params.rs  field.rs  filter.rs  limit.rs  mod.rs  node.rs  offset.rs  order_by.rs  star.rs
kosame_dsl/src/dsl/schema/: column.rs  column_constraint.rs  data_type.rs  mod.rs  relation.rs  table.rs
kosame_dsl/src/lang/: attribute.rs  mod.rs  path_ext.rs  type_override.rs
kosame_dsl/src/lang/clause/: limit.rs  mod.rs  offset.rs  order_by.rs  where.rs
kosame_dsl/src/lang/expr/: binary.rs  cast.rs  column_ref.rs  mod.rs
kosame_dsl/src/lang/query/: bind_params.rs  field.rs  mod.rs  node.rs  star.rs
kosame_dsl/src/lang/schema/: column.rs  column_constraint.rs  relation.rs  table.rs
kosame_dsl/src/repr/: mod.rs  row.rs
kosame_dsl/src/repr/schema/: column.rs  relation.rs  table.rs
kosame_dsl/src/runtime/: mod.rs
kosame_dsl/src/runtime/clause/: limit.rs  offset.rs  order_by.rs  where.rs
kosame_dsl/src/runtime/expr/: binary.rs  bind_param.rs  call.rs  cast.rs  column_ref.rs  lit.rs  mod.rs  paren.rs  unary.rs
kosame_dsl/src/runtime/query/: field.rs  mod.rs  node.rs  order_by.rs
kosame_dsl/src/runtime/schema/: column.rs  relation.rs  table.rs
kosame_macro/: Cargo.toml
kosame_macro/src/: alias.rs  as_ident.rs  as_type.rs  attribute.rs  bind_params.rs  colon_type.rs  column.rs  data_type.rs  docs.rs  driver.rs  keyword.rs  keywords.rs  lib.rs  path_ext.rs  query.rs  quote_option.rs  record_struct.rs  relation.rs  row.rs  row_struct.rs  scope.rs  slotted_sql.rs  table.rs  table_refs.rs  type_override.rs  unique_macro.rs  visitor.rs
kosame_macro/src/autocomplete/: keyword.rs  mod.rs
kosame_macro/src/clause/: field.rs  from.rs  group_by.rs  having.rs  limit.rs  mod.rs  offset.rs  order_by.rs  returning.rs  select.rs  set.rs  values.rs  where.rs  with.rs
kosame_macro/src/command/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
kosame_macro/src/dbms/: mod.rs
kosame_macro/src/dbms/postgres/: mod.rs
kosame_macro/src/dbms/sqlite/: mod.rs
kosame_macro/src/expr/: binary.rs  bind_param.rs  call.rs  cast.rs  column_ref.rs  lit.rs  mod.rs  paren.rs  raw.rs  unary.rs  visitor.rs
kosame_macro/src/part/: column_list.rs  mod.rs  table_alias.rs
kosame_macro/src/query/: bind_params.rs  field.rs  filter.rs  limit.rs  mod.rs  node.rs  node_path.rs  offset.rs  order_by.rs  relation_path.rs  star.rs
kosame_macro/src/schema/: column.rs  column_constraint.rs  column_override.rs  data_type.rs  field_spec.rs  mod.rs  relation.rs  table.rs
kosame_macro/src/statement/: mod.rs
kosame_repr/: Cargo.toml
kosame_repr/src/: lib.rs
kosame_repr/src/clause/: field.rs  from.rs  group_by.rs  having.rs  limit.rs  mod.rs  offset.rs  order_by.rs  returning.rs  select.rs  set.rs  values.rs  where.rs  with.rs
kosame_repr/src/command/: delete.rs  field.rs  insert.rs  mod.rs  select.rs  update.rs
kosame_repr/src/expr/: binary.rs  bind_param.rs  cast.rs  column_ref.rs  mod.rs  raw.rs  unary.rs
kosame_repr/src/part/: column_list.rs  table_alias.rs
kosame_repr/src/query/: field.rs  mod.rs  node.rs
kosame_repr/src/schema/: column.rs  mod.rs  relation.rs
kosame_sql/: Cargo.toml
kosame_sql/src/: dialect.rs  error.rs  fmt_sql.rs  formatter.rs  lib.rs  result.rs
kosame_sql/src/mssql/: mod.rs
kosame_sql/src/mysql/: mod.rs
kosame_sql/src/postgres/: mod.rs
kosame_sql/src/sqlite/: mod.rs
