[workspace]
resolver = "3"
members = [
    "kosame",
    "kosame_macro",
    "example",
]

[workspace.package]
version = "0.0.3"
edition = "2024"
description = "Macro-based Rust ORM focused on developer ergonomics"
repository = "https://github.com/pikaju/kosame"
documentation = "https://docs.rs/kosame"
readme = "README.md"
license = "Apache-2.0"
keywords = ["orm", "database", "query", "postgresql", "postgres"]
publish = ["kosame", "kosame_macro"]

[workspace.dependencies]
kosame = { path = "kosame", version = "0.0.3" }
kosame_macro = { path = "kosame_macro", version = "0.0.3" }

