[package]
name = "example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
kosame = { workspace = true, features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt"] }
tokio-postgres = "0.7.14"
