[package]
name = "kosame"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = []

postgres = ["kosame_macro/postgres", "dbms-postgres", "postgres-types", "dep:postgres"]
tokio-postgres = ["kosame_macro/tokio-postgres", "dbms-postgres", "postgres-types", "dep:tokio-postgres"]

postgres-types = ["dep:postgres-protocol", "dep:postgres-types", "dep:tokio-postgres"]

dbms-mssql = []
dbms-mysql = []
dbms-postgres = []
dbms-sqlite = []

serde = ["dep:serde", "kosame_macro/serde"]
serde-full = ["serde", "kosame_macro/serde-full"]

[dependencies]
fallible-iterator = "0.2.0"
futures-core = "0.3.31"
kosame_macro.workspace = true
pollster = "0.4.0"
postgres = { version = "0.19.12", optional = true }
postgres-protocol = { version = "0.6.8", optional = true }
postgres-types = { version = "0.2.9", optional = true }
serde = { version = "1.0.226", optional = true }
tokio-postgres = { version = "0.7.14", optional = true }
