[package]
name = "kosame_cli"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = []

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
kosame_dsl = { workspace = true, features = ["dsl", "repr"] }
tokio-postgres = "0.7.14"
