[package]
name = "kosame_dsl"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = []

dsl = [
	"dep:proc-macro-error",
	"dep:proc-macro2",
	"dep:quote",
	"dep:syn",
]
repr = []
runtime = []

postgres = []
tokio-postgres = []

serde = []
serde-full = []

[dependencies]
convert_case = "0.8.0"
proc-macro-error = { version = "1.0.4", optional = true }
proc-macro2 = { version = "1.0.101", optional = true }
quote = { version = "1.0.40", optional = true }
syn = { version = "2.0.106", optional = true }
