[package]
name = "kosame_macro"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[features]
default = []

postgres = []
tokio-postgres = []

serde = []
serde-full = []

[dependencies]
convert_case = "0.8.0"
proc-macro-error = "1.0.4"
proc-macro2 = { version = "1.0.101", features = ["span-locations"] }
quote = "1.0.40"
syn = { version = "2.0.106", features = ["extra-traits"] }
