[package]
name = "kosame_repr"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = []

[dependencies]
kosame_sql.workspace = true
