[package]
name = "kosame_sql"

version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true

[features]
default = []

mssql = []
mysql = []
postgres = []
sqlite = []

[dependencies]
